src/istio/common/chart/templates/peer-authentication.yaml
# Copyright 2024-2026 Defense Unicorns
# SPDX-License-Identifier: AGPL-3.0-or-later OR LicenseRef-Defense-Unicorns-Commercial

---
# @lulaStart 4bc74dfa-60b7-4716-af4b-b492a12eec42
# Source: istio/templates/bigbang/peerAuthentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default-istio-system
  namespace: istio-system
spec:
  mtls:
    mode: STRICT
# @lulaEnd 4bc74dfa-60b7-4716-af4b-b492a12eec42
